Using_python_to_access_web_data/socket_example.txt
Python 3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import socket
>>> mysock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
>>> mysock.connect(('data.pr4e.org', 80))
>>> cmd = 'GET http://data.pr4e.org/romeo.txt HTTP/1.0\r\n\r\n'.encode()
>>> mysock.send(cmd)
47
>>> while True:
...     data = mysock.recv(512)
...     if (len(data) < 1):
...             break
...     print(data.decode())
... mysock.close()
  File "<stdin>", line 6
    mysock.close()
    ^
SyntaxError: invalid syntax
>>> while True:
...     data = mysock.recv(512)
...     if (len(data) < 1):
...             break
...     print(data.decode())
...
HTTP/1.1 200 OK
Date: Sun, 04 Dec 2022 11:43:07 GMT
Server: Apache/2.4.18 (Ubuntu)
Last-Modified: Sat, 13 May 2017 11:22:22 GMT
ETag: "a7-54f6609245537"
Accept-Ranges: bytes
Content-Length: 167
Cache-Control: max-age=0, no-cache, no-store, must-revalidate
Pragma: no-cache
Expires: Wed, 11 Jan 1984 05:00:00 GMT
Connection: close
Content-Type: text/plain

But soft what light through yonder window breaks
It is the east and Juliet is the sun
Arise fair sun and kill the envious moon
Who is already s
ick and pale with grief

>>>
